[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/anima/ui/AnimaNodesPopup.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/ui/shared/AnimaNodesList.tscn" type="PackedScene" id=2]

[node name="NodesPopup" type="PopupPanel"]
margin_right = -0.280029
margin_bottom = -3.05176e-05
rect_min_size = Vector2( 260, 320 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimaNodesList" parent="." instance=ExtResource( 2 )]

[connection signal="node_selected" from="AnimaNodesList" to="." method="_on_AnimaNodesList_node_selected"]
